# fun_rust

./: Cargo.toml
door_riddle/: Cargo.toml  door_riddle.rs  result.rs
door_riddle/src/: main.rs  result.rs
pi_digits/: Cargo.toml  pi_digits.rs
pi_digits/src/: main.rs
src/: main.rs
sudoku_solver/: board.rs  sudoku_solver.rs
sudoku_solver/src/: board.rs  main.rs  new_board.rs
