[package]
name = "fun_rust"
version = "0.1.0"
authors = ["Miloslav Macůrek <miloslav.macurek@thermofisher.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.4.1"
num_cpus = "1.0.0"
stopwatch = "0.0.7"