[package]
name = "fun_rust"
version = "1.1.1"
authors = ["Miloslav Macůrek <macurek.m@gmail.com>"]
edition = "2024"

[[bin]]
name = "door_riddle"
path = "door_riddle/door_riddle.rs"

[[bin]]
name = "pi_digits"
path = "pi_digits/pi_digits.rs"

[[bin]]
name = "sudoku_solver"
path = "sudoku_solver/sudoku_solver.rs"

[dependencies]
fastrand = "2.3.0"
num_cpus = "1.16.0"
